--- a/asets/css/style.css
+++ b/asets/css/style.css
@@ -23,7 +23,6 @@ body{
     max-width: 900px;
     transition: all 1s ease;
     margin: 10px;
-    border: solid thin red;
 }
 
 .information{
@@ -136,4 +135,60 @@ body{
     outline: none;
     border-radius: 20px;
     color: #333;
+}
+
+.form label i{
+    color: #a7a7a7;
+}    
+
+.form input[type="submit"]{
+    background-color: #9191bd;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
+    color: #fff;
+    cursor: pointer;
+    margin-top: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
+}
+
+.form input[type="submit"]:hover{
+    background-color: #7a7a9a;
+}
+
+.hide{
+    position: absolute;
+    transform: translateY(-300%);
+}
+
+/* RESPONSIVE FORM*/
+
+@media screen and (max-width:750px){
+    html {
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width:580px){
+    html {
+        font-size: 10px;
+    }
+
+    .container-form {
+        flex-direction: column;
+    }
+
+    .information{
+        width: 100%;
+        padding: 20px;
+        border-bottom-left-radius: 0;
+        border-top-right-radius: 20px;
+    }
+
+    .form-information{
+        width: 100%;
+        padding: 20px;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 20px;
+    }
 }
